# CLDEtest

./: .gitignore  description.yaml
src/: CMakeLists.txt  NetCdfWriter.cpp  NetCdfWriter.h  main.cpp  test.cl
test/: config.yaml
